Now fetching from server, still plenty to explore

--- a/views/edit.jade
+++ b/views/edit.jade
@@ -1,4 +1,5 @@
-form(method='post', action='addnewuser')
+
+form(method='post', action='updateuser')
 	hidden(name='_id', value=user._id)
 	label Username:
 	input(name='username', value=user.username)
