--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,17 @@
-h1 Users ...
+div#item
+div#list-item
+br
+br
+br
 
-#Users
-	ul
-		- each user in users
-			li 
-				a(href='/ekmHoliCal/user/' + user.id)= user.username
+script#userTemplate(type='text/x-jquery-tmpl')
+	form#add-edit-form
+		User name: input#username(type="text") br	
+		Address 1: input#address1(type="text") br	
+		button#save-button(type="button")Save 
+	
 
-a(href='/ekmHoliCal/create') Create User		
+script#user-list-item-template(type='text/x-jquery-tmpl')
+	${username}	${address1}	button.edit(type="button")Edit  button.remove(type="button")Remove
+		
+
