--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,12 @@
 html(lang="en")
 	head
 		title Users
-		link(rel='stylesheet', href='/ekmHoliCal/public/stylesheets/style.css')
-	body
-		div!= body
+		//script(type="text/javascript", src="http://code.jquery.com/jquery-1.6.4.js")
+		script(type="text/javascript", src="/scripts/jquery-1.5.1.js")
+		//script(type="text/javascript", src="/scripts/json2.js")
+		script(type="text/javascript", src="/scripts/jquery.tmpl.js")
+		script(type="text/javascript", src="/scripts/underscore.js")
+		script(type="text/javascript", src="/scripts/backbone.js")
+		script(type="text/javascript", src="/scripts/client.js")
+	body 
+		div!= body 
