--- a/views/index.jade
+++ b/views/index.jade
@@ -1,17 +1,30 @@
+br
+br
 div#item
-div#list-item
+br
+br
+div#list-item 
 br
 br
 br
 
 script#userTemplate(type='text/x-jquery-tmpl')
 	form#add-edit-form
-		User name: input#username(type="text") br	
-		Address 1: input#address1(type="text") br	
-		button#save-button(type="button")Save 
+		| User name: 
+		input#username(type="text") 
+		br	
+		| Address 1: 
+		input#address1(type="text") 
+		br	
+		button#save-button(type="button")
+			| Save 
 	
 
 script#user-list-item-template(type='text/x-jquery-tmpl')
-	${username}	${address1}	button.edit(type="button")Edit  button.remove(type="button")Remove
+	${username}	${address}	
+	button.edit(type="button")
+		| Edit  
+	button.remove(type="button")
+		| Remove
 		
 
