--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,12 +2,16 @@
 html(lang="en")
 	head
 		title Users
-		//script(type="text/javascript", src="http://code.jquery.com/jquery-1.6.4.js")
-		script(type="text/javascript", src="/scripts/jquery-1.5.1.js")
-		//script(type="text/javascript", src="/scripts/json2.js")
-		script(type="text/javascript", src="/scripts/jquery.tmpl.js")
-		script(type="text/javascript", src="/scripts/underscore.js")
-		script(type="text/javascript", src="/scripts/backbone.js")
+
+		script(type="text/javascript", src="/scripts/libs/jquery-1.5.1.js")
+		script(type="text/javascript", src="/scripts/libs/jquery.tmpl.js")
+		script(type="text/javascript", src="/scripts/libs/underscore.js")
+		script(type="text/javascript", src="/scripts/libs/backbone.js")
+
+		script(type="text/javascript", src="/scripts/models.js")
+		script(type="text/javascript", src="/scripts/collections.js")
+		script(type="text/javascript", src="/scripts/views.js")
 		script(type="text/javascript", src="/scripts/client.js")
+
 	body 
 		div!= body 
