Now deleting from collection and backend, still update to do

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,9 +14,9 @@ script#userTemplate(type='text/x-jquery-tmpl')
 		input#username(type="text") 
 		br	
 		| Address 1: 
-		input#address1(type="text") 
+		input#address(type="text") 
 		br	
-		button#save-button(type="button")
+		button#save-button(type="submit")
 			| Save 
 	
 
