Replaced backbone.marionette with version v0.5.0 to utilize Composite Regions

--- a/views/index.html
+++ b/views/index.html
@@ -78,8 +78,10 @@
 			</script>
 
 			<script type="text/x-jquery-tmpl" id="tmpl-users-layout">
-				<div id="user-navigation-region"></div>
-				<div id="user-list-region"></div>
+				<div>
+					<div id="user-navigation-region"></div>
+					<div id="user-list-region"></div>
+				</div>	
 			</script>
 
 			<script type="text/x-jquery-tmpl" id="tmpl-user-grid-header">
