Attempting to add qtip for use with validation errors

--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,8 @@
 		<script type="text/javascript" src="/scripts/libs/backbone.modelbinding.js"></script>
 		<script type="text/javascript" src="/scripts/libs/backbone.validation.js"></script>
 
+		<script type="text/javascript" src="/scripts/libs/jquery.qtip-1.0.0-rc3.js"></script>
+
 		<script type="text/javascript" src="/scripts/models.js"></script>
 		<script type="text/javascript" src="/scripts/collections.js"></script>
 		<script type="text/javascript" src="/scripts/views.js"></script>
