Adding ability to update

--- a/public/scripts/libs/datatables/DT_bootstrap.css
+++ b/public/scripts/libs/datatables/DT_bootstrap.css
@@ -1,6 +1,6 @@
 .invalid {
-	border-color: red;
-	background-color: #fdecee;
+	border-color: red !important ; 
+	background-color: #fdecee !important ; 
 }
 
 
