--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,7 @@
 		<script type="text/javascript" src="/scripts/libs/backbone.modelbinding.js"></script>
 		<script type="text/javascript" src="/scripts/libs/backbone.validation.js"></script>
 
+
 		<script type="text/javascript" src="/scripts/libs/jquery.qtip.js"></script>
 
 		<script type="text/javascript" src="/scripts/models.js"></script>
@@ -34,19 +35,20 @@
  
     <style>
         body {
-            padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+					padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
         }
 
         .dropdown-menu {
-		    max-height: 400px;
-		    overflow-y: scroll;
-		    width: 220px;
-		}
+					max-height: 400px;
+					overflow-y: scroll;
+					width: 220px;
+				}
 
-		.list-item {
-		    padding-top: 6px;
-		    padding-left: 56px;
-		}
+				.list-item {
+					padding-top: 6px;
+					padding-left: 56px;
+				}
+
     </style>
   	<link href="/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 
@@ -75,10 +77,36 @@
 			</script>
 	    <!-- End of main template -->
 
+	    <!-- Department templates -->
+			<script type="text/x-jquery-tmpl" id="tmpl-department-maintenance">
+				<div class="span8">
+					<form id="department-create" class="form-horizontal">
+						<fieldset>
+							<legend>Departmrnt</legend>
+
+							<div class="control-group">			
+								<label class="control-label" for="name">Depatment:</label>
+								<div class="controls">
+									<input name="name" id="name" type="text" />
+								</div>
+							</div>	
+							
+							<div class="form-actions">			
+								<button class="btn btn-primary" id="save-button" type="submit"><i class="icon-ok-sign icon-white" /> Save</button>
+								<button class="btn " id="cancel-button">Cancel</button>
+							</div>	
+
+						</fieldset>
+					</form>
+				</div>	
+			</script>
+	    <!-- End of department templates -->
+
+
 			<!-- User templates -->
 			<script type="text/x-jquery-tmpl" id="tmpl-user-navigation">
 				<div class="alert alert-info span3" style="margin-bottom: 60px;">
-					Add a new user to the system <button id="create" type="button" class="btn btn-primary">Create »</button>  
+					Add a new user to the system <button id="create" type="button" class="btn btn-primary"><i class="icon-user"></i> Create »</button>  
 				</div>
 			</script>
 
@@ -90,32 +118,15 @@
 			</script>
 
 			<script type="text/x-jquery-tmpl" id="tmpl-user-grid-header">
-				<thead><tr><th>First name</th><th>Last name</th><th>Email</th><th> </th><th> </th></tr></thead><tbody>
+				<thead><tr><th>First name</th><th>Last name</th><th>Email</th><th>Department</th><th> </th></tr></thead><tbody>
 			</script>
 
 			<script type="text/x-jquery-tmpl" id="tmpl-user-item">
 				<td>${firstname}</td> 
 				<td>${lastname}</td>
 				<td>${email}</td>
-				<td><button type="button" class="btn edit">Edit</button></td>
-				<td>
-					<button style="width:80px;" type="button" 
-						
-						class=
-						{{if active}}	
-							"active-status remove btn btn-primary"
-						{{else}}
-							"active-status remove btn btn-danger"
-							{{/if}}		
-						>
-
-						{{if active }} 
-							Active 
-						{{else}} 
-							Inactive 
-						{{/if}}
-					</button>
-				</td>
+				<td>${department}</td>
+				<td><button type="button" class="btn edit"><i class="icon-edit"></i> Edit</button></td>
 			</script>
 
 			<script type="text/x-jquery-tmpl" id="tmpl-user-maintenance">
@@ -146,10 +157,9 @@
 							</div>	
 							
 							<div class="control-group">			
-								<label class="control-label" for="entitlement">Entitlement:</label>
+								<label class="control-label" for="department">Department:</label>
 								<div class="controls">
-									<input id="entitlement" class="span1" type="text" />
-									<p class="help-block">Annual days holiday</p>
+									<input name="department" id="department"  type="text" />
 								</div>	
 							</div>	
 							
@@ -168,7 +178,7 @@
 							</div>	
 
 							<div class="form-actions">			
-								<button class="btn btn-primary" id="save-button" type="submit">Save</button>
+								<button class="btn btn-primary" id="save-button" type="submit"><i class="icon-ok-sign icon-white" /> Save</button>
 								<button class="btn " id="cancel-button">Cancel</button>
 							</div>	
 
@@ -198,7 +208,7 @@
 	              	<a id="main-about" href="#about">About</a>
 	              </li>
 	            </ul>
-				<a id="main-admin" class="btn pull-right" href="#admin">Admin</a>
+							<a id="main-admin" class="btn pull-right" href="admin">Admin</a>
 	          </div>
 	        </div>
 	      </div>
