Nearly completed department maintenance functionality

--- a/public/scripts/templates/tmpl.department.item.html
+++ b/public/scripts/templates/tmpl.department.item.html
@@ -1,4 +1,4 @@
-<script type="text/x-jquery-tmpl" id="tmpl-user-item">
+<script type="text/x-jquery-tmpl" id="tmpl-department-item">
   <td>${name}</td> 
   <td><button type="button" class="btn edit"><i class="icon-edit"></i> Edit</button></td>
 </script>
