--- a/public/scripts/templates/tmpl.department.maintenance.html
+++ b/public/scripts/templates/tmpl.department.maintenance.html
@@ -2,10 +2,10 @@
 	<div class="span8">
 		<form id="department-create" class="form-horizontal">
 			<fieldset>
-				<legend>Departmrnt</legend>
+				<legend>Department</legend>
 
 				<div class="control-group">			
-					<label class="control-label" for="name">Depatment:</label>
+					<label class="control-label" for="name">Department:</label>
 					<div class="controls">
 						<input name="name" id="name" type="text" />
 					</div>
