--- a/public/scripts/templates/tmpl.user.maintenance.html
+++ b/public/scripts/templates/tmpl.user.maintenance.html
@@ -28,14 +28,27 @@
 						<input name="email" id="email" class="span3" type="text" placeholder="EKM email address" />
 					</div>
 				</div>	
-				
+
+
+				<div class="control-group">			
+					<label class="control-label" for="x">Department count:</label>
+					<div class="controls">
+						<span name="x" id="x" class="span3">${departments.count}</span>
+					</div>
+				</div>	
+
+<!--
 				<div class="control-group">			
 					<label class="control-label" for="department">Department:</label>
 					<div class="controls">
-						<input name="department" id="department"  type="text" />
+						<select name="department" id="department" />
+					    {{each departments}}
+				        <option value="${department._id}">${department.name}</option>
+				    	{{/each}}
+						</select>
 					</div>	
 				</div>	
-				
+-->				
 				<div class="control-group">			
 					<label class="control-label" for="startdate">Start date:</label>
 					<div class="controls">
