--- a/public/scripts/templates/tmpl.user.maintenance.html
+++ b/public/scripts/templates/tmpl.user.maintenance.html
@@ -33,22 +33,22 @@
 				<div class="control-group">			
 					<label class="control-label" for="x">Department count:</label>
 					<div class="controls">
-						<span name="x" id="x" class="span3">${departments.count}</span>
+						<span name="${departments}" id="x" class="span3">${departments.length}</span>
 					</div>
 				</div>	
 
-<!--
 				<div class="control-group">			
 					<label class="control-label" for="department">Department:</label>
 					<div class="controls">
-						<select name="department" id="department" />
-					    {{each departments}}
-				        <option value="${department._id}">${department.name}</option>
-				    	{{/each}}
-						</select>
+						<!-- <select name="departmentId" id="department"> -->
+							{{each departments}}
+							 xxx {{= value.key }}
+
+							{{/each}}	
+						<!-- </select> -->
 					</div>	
 				</div>	
--->				
+		
 				<div class="control-group">			
 					<label class="control-label" for="startdate">Start date:</label>
 					<div class="controls">
