Started to move to Handlebars template engine

--- a/public/scripts/templates/tmpl.department.maintenance.html
+++ b/public/scripts/templates/tmpl.department.maintenance.html
@@ -1,4 +1,4 @@
-<script type="text/x-jquery-tmpl" id="tmpl-department-maintenance">
+<script type="text/x-handlebars-template" id="tmpl-department-maintenance">
 	<div class="span8">
 		<form id="department-create" class="form-horizontal">
 			<fieldset>
