--- a/public/scripts/templates/tmpl.departments.layout.html
+++ b/public/scripts/templates/tmpl.departments.layout.html
@@ -1,4 +1,4 @@
-<script type="text/x-jquery-tmpl" id="tmpl-departments-layout">
+<script type="text/x-handlebars-template" id="tmpl-departments-layout">
   <div>
     <div id="department-navigation-region"></div>
     <div id="department-list-region"></div>
