--- a/public/scripts/templates/tmpl.main.region.html
+++ b/public/scripts/templates/tmpl.main.region.html
@@ -1,4 +1,4 @@
-<script type="text/x-jquery-tmpl" id="tmpl-main-region">
+<script type="text/x-handlebars-template" id="tmpl-main-region">
 	<div class="row">
 		<h4 class="span3">
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, uis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor 
