--- a/public/scripts/templates/tmpl.users.layout.html
+++ b/public/scripts/templates/tmpl.users.layout.html
@@ -1,4 +1,4 @@
-<script type="text/x-jquery-tmpl" id="tmpl-users-layout">
+<script type="text/x-handlebars-template" id="tmpl-users-layout">
 	<div>
 		<div id="user-navigation-region"></div>
 		<div id="user-list-region"></div>
