--- a/public/scripts/templates/tmpl.department.grid.header.html
+++ b/public/scripts/templates/tmpl.department.grid.header.html
@@ -1,3 +1,3 @@
-<script type="text/x-jquery-tmpl" id="tmpl-department-grid-header">
+<script type="text/x-handlebars-template" id="tmpl-department-grid-header">
   <thead><tr><th>First name</th><th>Last name</th><th>Email</th><th>Department</th><th> </th></tr></thead><tbody>
 </script>
