--- a/public/scripts/templates/tmpl.department.navigation.html
+++ b/public/scripts/templates/tmpl.department.navigation.html
@@ -1,4 +1,4 @@
-<script type="text/x-jquery-tmpl" id="tmpl-department-navigation">
+<script type="text/x-handlebars-template" id="tmpl-department-navigation">
   <div class="alert alert-info span3" style="margin-bottom: 60px;">
     Add a new department to the system <button id="create" type="button" class="btn btn-primary"><i class="icon-user"></i> Create »</button>  
   </div>
