--- a/public/scripts/templates/tmpl.user.grid.header.html
+++ b/public/scripts/templates/tmpl.user.grid.header.html
@@ -1,3 +1,3 @@
-<script type="text/x-jquery-tmpl" id="tmpl-user-grid-header">
+<script type="text/x-handlebars-template" id="tmpl-user-grid-header">
 	<thead><tr><th>Department</th><th> </th></tr></thead><tbody>
 </script>
