--- a/public/scripts/templates/tmpl.user.item.html
+++ b/public/scripts/templates/tmpl.user.item.html
@@ -1,7 +1,7 @@
-<script type="text/x-jquery-tmpl" id="tmpl-user-item">
-	<td>${firstname}</td> 
-	<td>${lastname}</td>
-	<td>${email}</td>
-	<td>${department}</td>
+<script type="text/x-handlebars-template" id="tmpl-user-item">
+	<td>{{firstname}}</td> 
+	<td>{{lastname}}</td>
+	<td>{{email}}</td>
+	<td>{{department}}</td>
 	<td><button type="button" class="btn edit"><i class="icon-edit"></i> Edit</button></td>
 </script>
