--- a/public/scripts/templates/tmpl.user.maintenance.html
+++ b/public/scripts/templates/tmpl.user.maintenance.html
@@ -32,9 +32,9 @@
 				<div class="control-group">			
 					<label class="control-label" for="department">Department:</label>
 					<div class="controls">
-						<select name="departmentId" id="department">
+						<select id="departmentId" name="departmentId">
 							{{#each departments}}
-							 <option value='{{this.id}}'>{{this.name}}</option>
+							 <option value='{{this._id}}'>{{this.name}}</option>
 							{{/each}}
 						</select>
 					</div>	
