Attempting to use Mongoose DB populate, so far without success

--- a/public/scripts/templates/tmpl.user.item.html
+++ b/public/scripts/templates/tmpl.user.item.html
@@ -2,6 +2,6 @@
 	<td>{{firstname}}</td> 
 	<td>{{lastname}}</td>
 	<td>{{email}}</td>
-	<td>{{department}}</td>
+	<td>{{department.name}}</td>
 	<td><button type="button" class="btn edit"><i class="icon-edit"></i> Edit</button></td>
 </script>
