Starting to add backbone-relational

--- a/public/scripts/templates/tmpl.user.maintenance.html
+++ b/public/scripts/templates/tmpl.user.maintenance.html
@@ -32,7 +32,7 @@
 				<div class="control-group">			
 					<label class="control-label" for="department">Department:</label>
 					<div class="controls">
-						<select id="departmentId" name="departmentId">
+						<select id="department" name="department">
 							{{#each departments}}
 							 <option value='{{this._id}}'>{{this.name}}</option>
 							{{/each}}
