--- a/public/scripts/templates/tmpl.department.maintenance.html
+++ b/public/scripts/templates/tmpl.department.maintenance.html
@@ -1,4 +1,4 @@
-<script type="text/x-handlebars-template" id="tmpl-department-maintenance">
+<script type="text/knockback-template" id="tmpl-department-maintenance">
 	<div class="span8">
 		<form id="department-create" class="form-horizontal">
 			<fieldset>
@@ -7,7 +7,7 @@
 				<div class="control-group">			
 					<label class="control-label" for="name">Department:</label>
 					<div class="controls">
-						<input name="name" id="name" type="text" />
+						<input data-bind="value: name" name="name" id="name" type="text" />
 					</div>
 				</div>	
 				
