--- a/public/scripts/templates/tmpl.user.grid.header.html
+++ b/public/scripts/templates/tmpl.user.grid.header.html
@@ -1,1 +1,1 @@
-<thead><tr><th>First name</th><th>Last name</th><th>Email</th><th>Department</th><th> </th></tr></thead><tbody></tbody>
+<thead><tr><th>First name</th><th>Last name</th><th>Email</th><th>Department</th><th>Department Id</th><th> </th></tr></thead><tbody></tbody>
