Removed plugins like relational. Back to basics!!!

--- a/public/scripts/templates/tmpl.user.item.html
+++ b/public/scripts/templates/tmpl.user.item.html
@@ -3,6 +3,6 @@
 	<td>{{lastname}}</td>
 	<td>{{email}}</td>
   <td>{{department.name}}</td>
-	<td>{{department._id}}</td>
+	<td>{{departmentId}}</td>
 	<td><button type="button" class="btn edit"><i class="icon-edit"></i> Edit</button></td>
 </script>
